@@ -7,6 +7,8 @@ Changelog
 * Add support for HEAD requests to @@images view
   [anthonygerrard]
 
+* Add hook to override headers in subclasses of file download view
+  [anthonygerrard]
 
 1.0.6 - 2011-10-18
 ------------------
